--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (min-width: 768px) {
+  .clip-path {
+    clip-path: polygon(10% 0, 0 100%, 100% 100%, 100% 0);
+  }
+}
