--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -7,3 +7,6 @@
     clip-path: polygon(10% 0, 0 100%, 100% 100%, 100% 0);
   }
 }
+.boxShadow {
+  box-shadow: 0px 10px 30px -10px rgba(0, 0, 0, 0.08);
+}
