--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -1,4 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
+
+@media (min-width: 768px) {
+  .clip-path {
+    clip-path: polygon(10% 0, 0 100%, 100% 100%, 100% 0);
+  }
+}
+.boxShadow {
+  box-shadow: 0px 10px 30px -10px rgba(0, 0, 0, 0.08);
+}
