--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -10,3 +10,10 @@
 .boxShadow {
   box-shadow: 0px 10px 30px -10px rgba(0, 0, 0, 0.08);
 }
+
+.agentCard {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px 0px;
+}
+.agentCard:hover {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 8px 0px;
+}
