--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -14,6 +14,9 @@
 .agentCard {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px 0px;
 }
+.agentProfile {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px 0px;
+}
 .agentCard:hover {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 8px 0px;
 }
