--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -127,3 +127,35 @@
   width: 35%;
   height: 35%;
 }
+
+input[type='search'] {
+  border: 1px solid gray;
+  padding: 0.2em 0.4em;
+  border-radius: 0.2em;
+}
+
+input[type='search'].light {
+  background: #fff;
+  color: #222;
+}
+
+input[type='search']::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  height: 1em;
+  width: 1em;
+  border-radius: 50em;
+  background: url(https://pro.fontawesome.com/releases/v5.10.0/svgs/solid/times-circle.svg)
+    no-repeat 50% 50%;
+  background-size: contain;
+  opacity: 0;
+  pointer-events: none;
+}
+
+input[type='search']:focus::-webkit-search-cancel-button {
+  opacity: 0.3;
+  pointer-events: all;
+}
+
+input[type='search'].dark::-webkit-search-cancel-button {
+  filter: invert(1);
+}
