--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -159,3 +159,53 @@ input[type='search']:focus::-webkit-search-cancel-button {
 input[type='search'].dark::-webkit-search-cancel-button {
   filter: invert(1);
 }
+
+.property-pill {
+  height: 18px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  color: white;
+  background-color: #1d4ed8;
+  font-size: 11px;
+  text-align: center;
+  pointer-events: auto;
+  padding: 1px 7px;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  width: fit-content;
+  position: relative;
+}
+
+.pill-text {
+  display: inline-block;
+  overflow: hidden;
+  line-height: 1;
+}
+.property-pill::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #1d4ed8;
+}
+
+.property-pill:hover {
+  background-color: #3f6212;
+}
+.property-pill:hover::after {
+  border-top: 6px solid #3f6212;
+}
+
+.leaflet-container .custom-marker a {
+  color: white;
+}
