--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -209,25 +209,34 @@ input[type='search'].dark::-webkit-search-cancel-button {
 .leaflet-container .custom-marker a {
   color: white;
 }
+
 .photo-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 8px;
 }
+
 .main-image {
   grid-area: 1 / 1 / 3 / 3;
   grid-column: span 2;
+  aspect-ratio: 2 / 1; /* Adjust to fit grid */
+  object-fit: cover; /* Ensures the image doesn't stretch */
+  width: 100%;
+  height: 100%;
 }
-.second-image {
-  grid-area: 1 / 3 / 2 / 4;
-}
-.third-image {
-  grid-area: 1 / 4 / 2 / 5;
-}
-.fourth-image {
-  grid-area: 2 / 3 / 3 / 4;
-}
+
+.second-image,
+.third-image,
+.fourth-image,
 .fifth-image {
-  grid-area: 2 / 4 / 3 / 5;
+  aspect-ratio: 1 / 1; /* Square for these images */
+  object-fit: cover; /* Ensure they fill their grid area */
+  width: 100%;
+  height: 100%;
+}
+
+.contactProperty {
+  border: 1px solid rgb(209, 209, 213);
+  border-radius: 11px;
 }
