--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -220,8 +220,8 @@ input[type='search'].dark::-webkit-search-cancel-button {
 .main-image {
   grid-area: 1 / 1 / 3 / 3;
   grid-column: span 2;
-  aspect-ratio: 2 / 1; /* Adjust to fit grid */
-  object-fit: cover; /* Ensures the image doesn't stretch */
+  aspect-ratio: 2 / 1;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -230,13 +230,13 @@ input[type='search'].dark::-webkit-search-cancel-button {
 .third-image,
 .fourth-image,
 .fifth-image {
-  aspect-ratio: 1 / 1; /* Square for these images */
-  object-fit: cover; /* Ensure they fill their grid area */
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
 .contactProperty {
-  border: 1px solid rgb(209, 209, 213);
+  border: 1px solid #d1d1d5;
   border-radius: 11px;
 }
