--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
+
 .root {
   --detail-medium-contrast: rgb(234, 234, 234);
   --text-high-contrast-rgb-value: 49, 49, 49;
